--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
+    "react-dnd": "^7.4.5",
+    "react-dnd-html5-backend": "^7.4.4",
+    "react-dnd-touch-backend": "^0.8.1",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.1",
     "react-scripts": "3.0.0",
